# kuse_cowork

./: README.md  package-lock.json  package.json  설치_가이드.md
.github/workflows/: release.yml
docs/: dmg-build-local.md  litellm-setup.md  mcp-debugging-and-ui.md  mcp-setup.md
scripts/: export-mcp-presets.mjs  export-settings-preset.mjs  run-tauri.mjs
src-tauri/: Cargo.toml  default-mcp-servers.json  default-settings.json
src-tauri/src/: commands.rs  database.rs  lib.rs  llm_client.rs
src-tauri/src/agent/: agent_loop.rs  message_builder.rs  tool_executor.rs  types.rs
src-tauri/src/mcp/: client.rs  config.rs  http_client.rs  mod.rs  storage.rs  types.rs
src-tauri/src/skills/: mod.rs
src-tauri/src/tools/: bash.rs  docker.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  list_dir.rs
src/components/: Agent.tsx  Chat.tsx  MCPSettings.css  MCPSettings.tsx  ModelSelector.tsx  Settings.tsx  TaskPanel.tsx
src/lib/: mcp-api.ts  tool-display.ts
src/stores/: settings.ts
