[package]
name = "kuse-cowork"
version = "0.1.0"
description = "Open-source Claude Cowork desktop app"
authors = ["Kuse AI"]
license = "MIT"
repository = "https://github.com/kuse-ai/kuse-cowork"
edition = "2021"

[lib]
name = "kuse_cowork_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }

[dependencies]
tauri = { version = "=2.9.3", features = [] }
tauri-plugin-shell = "=2.3.4"
tauri-plugin-fs = "=2.4.5"
tauri-plugin-store = "=2.4.2"
tauri-plugin-dialog = "=2.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for Claude API
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# SQLite for local storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
dirs = "5"

# Search tools
glob = "0.3"
regex = "1"

# Docker integration
bollard = "0.18"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "=2.3.4"
